fixed spacing issues

--- a/app/assets/stylesheets/api/main_page/task_form.scss
+++ b/app/assets/stylesheets/api/main_page/task_form.scss
@@ -3,6 +3,7 @@
   font-family: Roboto;
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.15);  height: 100vh;
   margin-left: 16px;
+  margin-right: auto;
   z-index: 24;
   width: 100%;
   max-width: 660px;
