--- a/app/assets/stylesheets/api/main_page/task_index.scss
+++ b/app/assets/stylesheets/api/main_page/task_index.scss
@@ -63,9 +63,23 @@
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.15);
   width: 100%;
   max-width: 1000px;
-  min-width: 400px;
+  min-width: 890px;
   margin-left: auto;
   margin-right: auto;
+  justify-content: space-between;
+  box-shadow: 0px 2px 2px rgba(100, 111, 121, .25);
+  border-radius: 3px;
+  background: white;
+}
+.task-index-condensed {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.15);
+  width: 100%;
+  max-width: 1000px;
+  min-width: 400px;
+  margin-left: auto;
   justify-content: space-between;
   box-shadow: 0px 2px 2px rgba(100, 111, 121, .25);
   border-radius: 3px;
